<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.teamdetails.TeamDetailsActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favourite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|top"
            android:layout_marginTop="@dimen/_120sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:srcCompat="@drawable/ic_favorite_border" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.florent37.diagonallayout.DiagonalLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@color/white"
                app:diagonal_angle="8"
                app:diagonal_direction="right"
                app:diagonal_position="bottom">

                <com.flaviofaria.kenburnsview.KenBurnsView
                    android:id="@+id/team_details_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.github.florent37.diagonallayout.DiagonalLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_136sdp"
                android:layout_marginEnd="@dimen/_68sdp"
                android:fontFamily="@font/trade_winds"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark" />

            <View
                android:id="@+id/shadow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@id/name_text"
                android:background="@drawable/shadow_line" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/shadow"
                android:layout_marginTop="@dimen/_8sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/address_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextDetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/address_text"
                            style="@style/TextDetailsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/phone_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextDetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/phone_text"
                            style="@style/TextDetailsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/website_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextDetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/website" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/website_text"
                            style="@style/TextDetailsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextDetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/email_text"
                            style="@style/TextDetailsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/founded_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextDetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/founded" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/founded_text"
                            style="@style/TextDetailsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/club_colors_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextDetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/club_colors" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/club_colors_text"
                            style="@style/TextDetailsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/venue_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextDetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/venue" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/venue_text"
                            style="@style/TextDetailsStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/players_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextDetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/players" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/players_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimaryLight"
                            android:nestedScrollingEnabled="false" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>